--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,8 +25,16 @@
             android:textColor="@color/white"
             android:textSize="30dp"
             android:textStyle="bold" />
+        <ImageButton
+            android:id="@+id/info_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/info"
+            android:layout_alignParentRight="true"
+            android:layout_centerVertical="true"
+            android:background="@color/transparent"/>
     </RelativeLayout>
-    <!--底部直线比例图以及垃圾清理按钮-->
+    <!--底部手机空间信息以及垃圾清理按钮-->
     <RelativeLayout
         android:id="@+id/massage_bar"
         android:layout_width="match_parent"
@@ -34,7 +42,7 @@
         android:layout_alignParentBottom="true"
         android:background="@color/light_blue"
         android:orientation="horizontal">
-        <!--直线比例图-->
+        <!--手机空间信息-->
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
