--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentTop="true"
-        android:background="@color/light_blue">
+        android:background="@color/light_blue"
+        android:gravity="center_vertical">
 
         <TextView
             android:layout_width="wrap_content"
@@ -25,27 +26,36 @@
             android:textColor="@color/white"
             android:textSize="30dp"
             android:textStyle="bold" />
+
         <ImageButton
             android:id="@+id/info_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/info"
             android:layout_alignParentRight="true"
-            android:layout_centerVertical="true"
-            android:background="@color/transparent"/>
+            android:background="@color/transparent"
+            android:src="@drawable/info"
+            android:paddingRight="17dp"
+            android:paddingTop="25dp"
+
+             />
     </RelativeLayout>
     <!--底部手机空间信息以及垃圾清理按钮-->
     <RelativeLayout
         android:id="@+id/massage_bar"
         android:layout_width="match_parent"
-        android:layout_height="80dp"
+        android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:background="@color/light_blue"
-        android:orientation="horizontal">
+        android:paddingLeft="10dp"
+        android:paddingRight="15dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:gravity="center_vertical"
+        >
         <!--手机空间信息-->
         <LinearLayout
             android:layout_width="wrap_content"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:layout_alignParentLeft="true"
             android:gravity="center_vertical"
             android:orientation="vertical">
@@ -54,28 +64,20 @@
                 android:id="@+id/space_message"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:textSize="18dp"
-                android:textColor="@color/white"/>
+                android:textColor="@color/white"
+                android:textSize="15dp" />
 
 
         </LinearLayout>
         <!--cleaner-->
-        <LinearLayout
+        <ImageButton
+            android:layout_alignParentRight="true"
+            android:id="@+id/cleaner_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:layout_centerVertical="true">
-
-            <ImageButton
-                android:id="@+id/cleaner_button"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_centerInParent="true"
-                android:layout_marginRight="30dp"
-                android:background="@color/transparent"
-                android:src="@drawable/cleaner"/>
-
-        </LinearLayout>
+            android:layout_centerInParent="true"
+            android:background="@color/transparent"
+            android:src="@drawable/cleaner" />
 
     </RelativeLayout>
 
