--- a/app/src/main/res/layout/activity_music.xml
+++ b/app/src/main/res/layout/activity_music.xml
@@ -31,14 +31,15 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:background="@color/transparent"
-            android:paddingLeft="20dp"
-            android:paddingTop="10dp"
+            android:paddingLeft="12dp"
+            android:paddingTop="13dp"
             android:src="@drawable/home_button" />
     </RelativeLayout>
+
     <ListView
         android:id="@+id/music_list"
-        android:layout_below="@id/title_bar"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"></ListView>
+        android:layout_height="match_parent"
+        android:layout_below="@id/title_bar"></ListView>
 
 </RelativeLayout>
