--- a/app/src/main/res/layout/all_files_list.xml
+++ b/app/src/main/res/layout/all_files_list.xml
@@ -6,12 +6,19 @@
     <ImageView
         android:id="@+id/all_files_list_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:paddingLeft="10dp"
+        android:paddingTop="5dp"
+        android:paddingBottom="5dp"
+        android:paddingRight="5dp"
+        android:layout_gravity="center_vertical"/>
     <TextView
         android:id="@+id/all_files_list_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:textSize="20dp"
+        android:paddingLeft="5dp"
+        android:layout_gravity="center_vertical"
         />
 
 </LinearLayout>
