--- a/app/src/main/res/layout/catagory_list.xml
+++ b/app/src/main/res/layout/catagory_list.xml
@@ -9,15 +9,18 @@
         android:id="@+id/category_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="15dp"/>
+        android:paddingTop="7dp"
+        android:paddingBottom="7dp"
+        android:paddingRight="10dp"
+        android:paddingLeft="18dp"/>
 
     <TextView
         android:id="@+id/category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="20dp"
+        android:layout_marginLeft="15dp"
 
-        android:textSize="25dp" />
+        android:textSize="20dp" />
 
 
 </LinearLayout>
