--- a/app/src/main/res/layout/image_grid.xml
+++ b/app/src/main/res/layout/image_grid.xml
@@ -7,7 +7,7 @@
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
+        android:padding="5dp"
         />
 
 </LinearLayout>
