--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,7 +3,8 @@
     <color name="colorPrimary">#008577</color>
     <color name="colorPrimaryDark">#00574B</color>
     <color name="colorAccent">#D81B60</color>
-    <color name="gray">#666666</color>
+    <color name="gray">#343434</color>
+    <color name="light_gray">#a0a0a0</color>
     <color name="login_button_green">#009999</color>
     <color name="white">#FFFFFF</color>
     <color name="light_blue">#6699CC</color>
