--- a/app/src/main/res/layout/catagory_list.xml
+++ b/app/src/main/res/layout/catagory_list.xml
@@ -1,26 +1,36 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="horizontal"
-    android:gravity="center_vertical">
+    android:layout_height="match_parent">
 
     <ImageView
         android:id="@+id/category_picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
+        android:paddingLeft="18dp"
         android:paddingTop="7dp"
-        android:paddingBottom="7dp"
         android:paddingRight="10dp"
-        android:paddingLeft="18dp"/>
+        android:paddingBottom="7dp" />
 
     <TextView
         android:id="@+id/category_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerVertical="true"
         android:layout_marginLeft="15dp"
-
+        android:layout_toRightOf="@id/category_picture"
         android:textSize="20dp" />
 
+    <TextView
+        android:id="@+id/item_total_size"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentRight="true"
+        android:textColor="@color/light_gray"
+        android:layout_centerVertical="true"
+        android:paddingRight="15dp"
+        android:textSize="16dp" />
 
-</LinearLayout>
+
+</RelativeLayout>
