--- a/app/src/main/res/layout/activity_image.xml
+++ b/app/src/main/res/layout/activity_image.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ImageActivity">
+
     <RelativeLayout
         android:id="@+id/title_bar"
         android:layout_width="match_parent"
@@ -34,11 +35,12 @@
             android:paddingTop="13dp"
             android:src="@drawable/home_button" />
     </RelativeLayout>
+
     <GridView
         android:id="@+id/image_grid"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:numColumns="3"
-        android:layout_below="@id/title_bar"></GridView>
+        android:layout_below="@id/title_bar"
+        android:numColumns="3"></GridView>
 
 </RelativeLayout>
