--- a/app/src/main/res/layout/document_list.xml
+++ b/app/src/main/res/layout/document_list.xml
@@ -7,8 +7,8 @@
         android:id="@+id/document_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="8dp"
-        android:layout_centerVertical="true"/>
+        android:layout_centerVertical="true"
+        android:padding="8dp" />
 
     <TextView
         android:id="@+id/document_name"
@@ -23,8 +23,8 @@
         android:layout_height="wrap_content"
         android:layout_below="@id/document_name"
         android:layout_toRightOf="@id/document_image"
-        android:textSize="15dp"
-        android:textColor="@color/light_gray"/>
+        android:textColor="@color/light_gray"
+        android:textSize="15dp" />
 
 
 </RelativeLayout>
