--- a/app/src/main/res/layout/image_grid.xml
+++ b/app/src/main/res/layout/image_grid.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center">
+
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp"
-        />
+        android:padding="5dp" />
 
 </LinearLayout>
