--- a/app/src/main/res/layout/image_grid.xml
+++ b/app/src/main/res/layout/image_grid.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:gravity="center">
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="5dp" />
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:padding="4dp" />
 
-</LinearLayout>
+</RelativeLayout>
