--- a/app/src/main/res/layout/video_griid.xml
+++ b/app/src/main/res/layout/video_griid.xml
@@ -3,19 +3,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:gravity="center_horizontal"
-    android:minHeight="?android:attr/listPreferredItemHeight"
     android:orientation="vertical"
     android:padding="5dp">
 
     <ImageView
         android:id="@+id/video_image"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content" />
+        android:layout_height="wrap_content"
+        android:minHeight="?android:attr/listPreferredItemHeight"/>
 
     <TextView
         android:id="@+id/video_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp" />
+        android:textSize="18dp"
+        android:minHeight="?android:attr/listPreferredItemHeight"/>
 
 </LinearLayout>
