--- a/app/src/main/res/layout/image_grid.xml
+++ b/app/src/main/res/layout/image_grid.xml
@@ -8,6 +8,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:padding="4dp" />
+        android:padding="4dp"
+        android:src="@drawable/image"/>
 
 </RelativeLayout>
