--- a/app/src/main/res/layout/video_griid.xml
+++ b/app/src/main/res/layout/video_griid.xml
@@ -10,7 +10,8 @@
         android:id="@+id/video_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minHeight="?android:attr/listPreferredItemHeight"/>
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:src="@drawable/video"/>
 
     <TextView
         android:id="@+id/video_name"
