增加手机分析报告页面

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -70,13 +70,13 @@
         </LinearLayout>
 
         <ImageButton
-            android:id="@+id/cleaner_button"
+            android:id="@+id/suggestion_button"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
             android:layout_centerInParent="true"
             android:background="@color/transparent"
-            android:src="@drawable/cleaner" />
+            android:src="@drawable/suggestion" />
 
     </RelativeLayout>
 
