--- a/app/src/main/res/layout/installed_apk_grid.xml
+++ b/app/src/main/res/layout/installed_apk_grid.xml
@@ -7,17 +7,18 @@
     android:padding="5dp">
 
     <ImageView
-        android:id="@+id/video_image"
+        android:id="@+id/apk_image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:src="@drawable/video"/>
+        android:src="@drawable/apk" />
 
     <TextView
-        android:id="@+id/video_name"
+        android:id="@+id/apk_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:minHeight="?android:attr/listPreferredItemHeight"/>
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:paddingTop="3dp"
+        android:textSize="18dp" />
 
 </LinearLayout>
