--- a/app/src/main/res/layout/activity_large_files.xml
+++ b/app/src/main/res/layout/activity_large_files.xml
@@ -41,8 +41,8 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_above="@id/delete_all_largefiles"
-        android:paddingLeft="5dp"
-        android:layout_below="@id/title_bar">
+        android:layout_below="@id/title_bar"
+        android:paddingLeft="5dp">
 
     </ListView>
 
