--- a/app/src/main/res/layout/image_grid.xml
+++ b/app/src/main/res/layout/image_grid.xml
@@ -2,14 +2,14 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
-    android:padding="4dp"
-    android:gravity="center">
+    android:gravity="center"
+    android:padding="4dp">
 
     <ImageView
         android:id="@+id/image"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:src="@drawable/image"/>
+        android:src="@drawable/image" />
 
 </RelativeLayout>
