--- a/app/src/main/res/layout/video_griid.xml
+++ b/app/src/main/res/layout/video_griid.xml
@@ -11,13 +11,13 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:minHeight="?android:attr/listPreferredItemHeight"
-        android:src="@drawable/video"/>
+        android:src="@drawable/video" />
 
     <TextView
         android:id="@+id/video_name"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="18dp"
-        android:minHeight="?android:attr/listPreferredItemHeight"/>
+        android:minHeight="?android:attr/listPreferredItemHeight"
+        android:textSize="18dp" />
 
 </LinearLayout>
